--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<form method="post" action="convert-url-link.php" class="online-tools">
+<form style="display: none;"> method="post" action="convert-url-link.php" class="online-tools">
 <h2>Convert Multiple URLs into Links</h2>
 <p>Paste your URLs in the box below and then click the button.</p>
 <p>The URLs will appear as link code in the box at the bottom of the page.</p>
