--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<form style="display: none;"> method="post" action="convert-url-link.php" class="online-tools">
+<div style="display: none;">
+
+<form method="post" action="convert-url-link.php" class="online-tools">
 <h2>Convert Multiple URLs into Links</h2>
 <p>Paste your URLs in the box below and then click the button.</p>
 <p>The URLs will appear as link code in the box at the bottom of the page.</p>
@@ -22,6 +24,7 @@
 </select>
 </p>
 
+</div>
 
 <p><textarea id="oldText" name="oldText" rows="9" cols="56"></textarea></p>
 <p><input type="button" name="Convert-URL-link" value="Convert URL to to HTML link" id="convertURL" class="subbtn">
