--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <p><textarea id="oldText" name="oldText" rows="9" cols="56"></textarea></p>
 <p><input type="button" name="Convert-URL-link" value="Convert URL to to HTML link" id="convertURL" class="subbtn">
-<input type="button" name="clearText" id="clearText" value="Reset" class="rstbtn"></p>
+<input style="display: none;" type="button" name="clearText" id="clearText" value="Reset" class="rstbtn"></p>
 <h2>URLs Converted into HTML Link Code</h2>
 <p class="flat">Copy your URL links code from the box below.</p>
 <p><textarea id="newCode" name="newCode" rows="9" cols="56"></textarea></p>
