--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
 
 <p><textarea id="oldText" name="oldText" rows="9" cols="56"></textarea></p>
 <p><input type="button" name="Convert-URL-link" value="Convert URL to to HTML link" id="convertURL" class="subbtn">
-<input style="display: none;" type="button" name="clearText" id="clearText" value="Reset" class="rstbtn"></p>
+
+<div style="display: none;">
+
+<input type="button" name="clearText" id="clearText" value="Reset" class="rstbtn"></p>
 <h2>URLs Converted into HTML Link Code</h2>
 <p class="flat">Copy your URL links code from the box below.</p>
+
+</div>
+
 <p><textarea id="newCode" name="newCode" rows="9" cols="56"></textarea></p>
 <p>
 <input type="button" name="copyClip" id="copyClip" value="Copy to Clipboard" class="actbtn" data-clipboard-target="#newCode">
