--- a/index.html
+++ b/index.html
@@ -46,3 +46,8 @@
 
 <script type="text/javascript" src="aaaurl-html-link-v6c.js"></script>
 <script type="text/javascript" src="aaaclipped.js"></script>
+
+<!--
+notlar: bazı öğelerin görüntülenmesini istemediğim için o öğeleri div içine alıp dive style (görünmezlik) verdim.
+aaaclipped.js dosyası burada olmadığı için kopyala butonu çalışmıyor.
+-->
