--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </div>
 
-<p><textarea id="oldText" name="oldText" rows="12" cols="96"></textarea></p>
+<p><textarea autofocus id="oldText" name="oldText" rows="12" cols="126"></textarea></p>
 <p><input type="button" name="Convert-URL-link" value="Convert URL to to HTML link" id="convertURL" class="subbtn">
 
 <div style="display: none;">
@@ -37,7 +37,7 @@
 
 </div>
 
-<p><textarea id="newCode" name="newCode" rows="12" cols="96"></textarea></p>
+<p><textarea id="newCode" name="newCode" rows="12" cols="126"></textarea></p>
 <p>
 <input type="button" name="copyClip" id="copyClip" value="Copy to Clipboard" class="actbtn" data-clipboard-target="#newCode">
 </p>
